sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:7: error: not found: value pos
    while(j>0 && getValue(pos-1)>j){
                          ^AlgInsertionSort:8: error: not found: value pos
      copy(pos-1,pos)
           ^AlgInsertionSort:8: error: not found: value pos
      copy(pos-1,pos)
                 ^AlgInsertionSort:9: error: not found: value pos
      pos=pos -1
      ^AlgInsertionSort:11: error: not found: value pos
    if(pos!=i)
       ^AlgInsertionSort:12: error: not found: value pos
    setValue(pos,j)
             ^