sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
	var n=getValueCount()-1
  for (i<-1 to n){
    var v=getValue(i)
    var j=i
    while(j>0 && getValue(pos-1)>j){
      copy(pos-1,pos)
      pos=pos -1
    }
    if(pos!=i)
    setValue(pos,j)
    }
  }